@@ -10,6 +10,7 @@ import uk.gov.hmcts.reform.iacaseapi.component.testutils.fixtures.PreSubmitCallb
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.CaseNote;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.StatutoryTimeframe24Weeks;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.StatutoryTimeframe24WeeksHistory;
+import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.State;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.IdValue;
 import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.YesOrNo;
 
@@ -20,16 +21,7 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static uk.gov.hmcts.reform.iacaseapi.component.testutils.fixtures.AsylumCaseForTest.anAsylumCase;
 import static uk.gov.hmcts.reform.iacaseapi.component.testutils.fixtures.CallbackForTest.CallbackForTestBuilder.callback;
 import static uk.gov.hmcts.reform.iacaseapi.component.testutils.fixtures.CaseDetailsForTest.CaseDetailsForTestBuilder.someCaseDetailsWith;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.APPEAL_SUBMISSION_DATE;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.APPELLANT_FAMILY_NAME;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.APPELLANT_GIVEN_NAMES;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.CASE_NOTES;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.STATUTORY_TIMEFRAME_24_WEEKS;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.STF_24W_CURRENT_REASON_AUTO_GENERATED;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.STF_24W_CURRENT_STATUS_AUTO_GENERATED;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.STF_24W_PREVIOUS_STATUS_WAS_YES_AUTO_GENERATED;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.TRIBUNAL_RECEIVED_DATE;
-import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.XUI_BANNER_TEXT;
+import static uk.gov.hmcts.reform.iacaseapi.domain.entities.AsylumCaseFieldDefinition.*;
 import static uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.Event.ADD_STATUTORY_TIMEFRAME_24_WEEKS;
 import static uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.State.APPEAL_SUBMITTED;
 
@@ -65,7 +57,7 @@ class AddStatutoryTimeframe24WeeksTest extends SpringBootIntegrationTest impleme
 
         Optional<List<IdValue<CaseNote>>> caseNotes = response.getAsylumCase().read(CASE_NOTES);
 
-        CaseNote caseNote = caseNotes.get().get(0).getValue();
+        CaseNote caseNote = caseNotes.get().getFirst().getValue();
 
         assertThat(caseNotes.get()).hasSize(1);
         assertThat(caseNote.getUser()).isEqualTo("Case Officer");
@@ -76,9 +68,9 @@ class AddStatutoryTimeframe24WeeksTest extends SpringBootIntegrationTest impleme
         List<IdValue<StatutoryTimeframe24WeeksHistory>> statutoryTimeframe24WeekHistory = statutoryTimeframe24Weeks.get().getHistory();
 
         assertThat(statutoryTimeframe24WeekHistory).hasSize(1);
-        assertThat(statutoryTimeframe24WeekHistory.get(0).getValue().getUser()).isEqualTo("Case Officer");
-        assertThat(statutoryTimeframe24WeekHistory.get(0).getValue().getStatus()).isEqualTo(YesOrNo.YES);
-        assertThat(statutoryTimeframe24WeekHistory.get(0).getValue().getReason()).isEqualTo(reason);
+        assertThat(statutoryTimeframe24WeekHistory.getFirst().getValue().getUser()).isEqualTo("Case Officer");
+        assertThat(statutoryTimeframe24WeekHistory.getFirst().getValue().getStatus()).isEqualTo(YesOrNo.YES);
+        assertThat(statutoryTimeframe24WeekHistory.getFirst().getValue().getReason()).isEqualTo(reason);
     }
 
     @Test
@@ -146,4 +138,48 @@ class AddStatutoryTimeframe24WeeksTest extends SpringBootIntegrationTest impleme
         assertThat(response.getAsylumCase().read(STF_24W_PREVIOUS_STATUS_WAS_YES_AUTO_GENERATED, YesOrNo.class).get()).isEqualTo(YesOrNo.YES);
     }
 
+    @Test
+    @WithMockUser(authorities = {"caseworker-ia", "tribunal-caseworker"})
+    void cannot_add_statutory_timeframe_24_weeks_before_live_date() {
+        addCaseWorkerUserDetailsStub(server);
+        addServiceAuthStub(server);
+        addRoleAssignmentQueryStub(server);
+
+        PreSubmitCallbackResponseForTest response = iaCaseApiClient.aboutToStart(callback()
+            .event(ADD_STATUTORY_TIMEFRAME_24_WEEKS)
+            .caseDetails(someCaseDetailsWith()
+                .state(State.DECISION)
+                .caseData(anAsylumCase()
+                    .with(APPEAL_SUBMISSION_DATE, APPEAL_SUBMISSION_DATE_STR)
+                    .with(APPELLANT_IN_DETENTION, YesOrNo.YES)
+                    .with(APPEAL_OUT_OF_COUNTRY, YesOrNo.YES))));
+
+        assertThat(response).isNotNull();
+        assertThat(response.getErrors()).contains("This event cannot be run on a case created before 01/09/2026");
+        assertThat(response.getErrors()).contains("This event cannot be run on a detained case");
+        assertThat(response.getErrors()).contains("This event cannot be run on an out of country case");
+        assertThat(response.getErrors()).contains("This event cannot be run on this case");
+    }
+
+    @Test
+    @WithMockUser(authorities = {"caseworker-ia", "tribunal-caseworker"})
+    void can_add_statutory_timeframe_24_weeks_after_live_date() {
+        addCaseWorkerUserDetailsStub(server);
+        addServiceAuthStub(server);
+        addRoleAssignmentQueryStub(server);
+
+        String appealSubmissionDate = "2026-09-01";
+
+        PreSubmitCallbackResponseForTest response = iaCaseApiClient.aboutToStart(callback()
+            .event(ADD_STATUTORY_TIMEFRAME_24_WEEKS)
+            .caseDetails(someCaseDetailsWith()
+                .state(APPEAL_SUBMITTED)
+                .caseData(anAsylumCase()
+                    .with(APPEAL_SUBMISSION_DATE, appealSubmissionDate)
+                    .with(APPELLANT_IN_DETENTION, YesOrNo.NO)
+                    .with(APPEAL_OUT_OF_COUNTRY, YesOrNo.NO))));
+
+        assertThat(response).isNotNull();
+        assertThat(response.getErrors()).isEmpty();
+    }
 }
