@@ -18,7 +18,8 @@ import static uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.State.APPEAL_STA
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
+
 import lombok.SneakyThrows;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -28,6 +29,7 @@ import org.springframework.security.test.context.support.WithMockUser;
 import uk.gov.hmcts.reform.iacaseapi.component.testutils.SpringBootIntegrationTest;
 import uk.gov.hmcts.reform.iacaseapi.component.testutils.WithDocumentApiStub;
 import uk.gov.hmcts.reform.iacaseapi.component.testutils.WithNotificationsApiStub;
+import uk.gov.hmcts.reform.iacaseapi.component.testutils.WithHomeOfficeIntegrationStub;
 import uk.gov.hmcts.reform.iacaseapi.component.testutils.WithReferenceDataStub;
 import uk.gov.hmcts.reform.iacaseapi.component.testutils.WithRoleAssignmentStub;
 import uk.gov.hmcts.reform.iacaseapi.component.testutils.WithServiceAuthStub;
@@ -38,7 +40,7 @@ import uk.gov.hmcts.reform.iacaseapi.domain.entities.ccd.field.YesOrNo;
 
 class DocumentApiDelgationTest extends SpringBootIntegrationTest implements WithUserDetailsStub,
     WithRoleAssignmentStub, WithServiceAuthStub, WithDocumentApiStub, WithReferenceDataStub,
-    WithTimedEventServiceStub, WithNotificationsApiStub {
+    WithTimedEventServiceStub, WithNotificationsApiStub, WithHomeOfficeIntegrationStub {
 
     @Value("classpath:prd-org-users-response.json")
     private Resource resourceFile;
@@ -47,10 +49,10 @@ class DocumentApiDelgationTest extends SpringBootIntegrationTest implements With
     private String refDataPath;
 
     @Test
-    @WithMockUser(authorities = {"caseworker-ia-legalrep-solicitor"})
+    @WithMockUser(authorities = {"caseworker-ia", "caseworker-ia-legalrep-solicitor"})
     void doesnt_delegate_to_document_api() throws IOException {
         String prdResponseJson =
-            new String(Files.readAllBytes(Paths.get(resourceFile.getURI())));
+            new String(Files.readAllBytes(Path.of(resourceFile.getURI())));
 
         assertThat(prdResponseJson).isNotBlank();
 
@@ -77,10 +79,10 @@ class DocumentApiDelgationTest extends SpringBootIntegrationTest implements With
     }
 
     @Test
-    @WithMockUser(authorities = {"caseworker-ia-legalrep-solicitor"})
+    @WithMockUser(authorities = {"caseworker-ia", "caseworker-ia-legalrep-solicitor"})
     void does_delegate_to_document_api_when_notification_not_turned_off() throws IOException {
         String prdResponseJson =
-            new String(Files.readAllBytes(Paths.get(resourceFile.getURI())));
+            new String(Files.readAllBytes(Path.of(resourceFile.getURI())));
 
         assertThat(prdResponseJson).isNotBlank();
 
@@ -90,6 +92,7 @@ class DocumentApiDelgationTest extends SpringBootIntegrationTest implements With
         addRoleAssignmentActorStub(server);
         addRoleAssignmentQueryStub(server);
         addDocumentApiTransformerStub(server);
+        addHomeOfficeIntegrationApiTransformerStub(server);
         addTimedEventServiceStub(server);
         addNotificationsApiTransformerStub(server);
 
